# vim-data

./: .gitignore  Dockerfile  Makefile  README.md  netlify.toml  pyproject.toml  run.py
docs/: core-functions.md  vim-data.md
docs/.obsidian/: workspace.json
docs/datasets/: source-target-transform.md
tests/: test_subprocess_io.py  test_termrec.py
vim_data/lib/: subprocess_io.py  term_rec.py
