[tool.poetry]
name = "vim_data"
version = "0.1.0"
description = ""
authors = ["Oliver"]

[tool.poetry.dependencies]
python = "^3.11"
tqdm = "^4.66.1"
gitpython = "^3.1.41"
jupytext = "^1.16.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"